--- a/src/br/com/view/VIEWtemporizador.form
+++ b/src/br/com/view/VIEWtemporizador.form
@@ -76,7 +76,7 @@
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace pref="55" max="32767" attributes="0"/>
+                      <EmptySpace pref="60" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="spinnerHoras" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                           <Component id="spinnerMinutos" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
@@ -193,11 +193,11 @@
                               <Component id="btnVolta" min="-2" pref="80" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
-                              <Component id="txtMin" min="-2" pref="80" max="-2" attributes="0"/>
+                              <Component id="txtMinutos" min="-2" pref="80" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="txtSeg" min="-2" pref="80" max="-2" attributes="0"/>
+                              <Component id="txtSegundos" min="-2" pref="80" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="txtMili" min="-2" pref="80" max="-2" attributes="0"/>
+                              <Component id="txtMilisegundos" min="-2" pref="80" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
@@ -209,9 +209,9 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="txtMin" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
-                          <Component id="txtSeg" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
-                          <Component id="txtMili" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
+                          <Component id="txtMinutos" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
+                          <Component id="txtSegundos" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
+                          <Component id="txtMilisegundos" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -227,23 +227,23 @@
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JTextField" name="txtMin">
+            <Component class="javax.swing.JTextField" name="txtMinutos">
               <Properties>
                 <Property name="editable" type="boolean" value="false"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Segoe UI" size="24" style="0"/>
+                  <Font name="Tahoma" size="24" style="0"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
                 <Property name="text" type="java.lang.String" value="0"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtMinActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtMinutosActionPerformed"/>
               </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
               </AuxValues>
             </Component>
-            <Component class="javax.swing.JTextField" name="txtSeg">
+            <Component class="javax.swing.JTextField" name="txtSegundos">
               <Properties>
                 <Property name="editable" type="boolean" value="false"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -256,7 +256,7 @@
                 <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
               </AuxValues>
             </Component>
-            <Component class="javax.swing.JTextField" name="txtMili">
+            <Component class="javax.swing.JTextField" name="txtMilisegundos">
               <Properties>
                 <Property name="editable" type="boolean" value="false"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
